Added two new special square layouts: Clustered and Circular